--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,8 +7,8 @@
     --color-gray-alt: #898989;
     --color-black: #000000;
 
-    --border: 1px solid var(var(--color-dark));
-    --border-raduis: 14px;
+    --border: 1px solid var(--color-dark);
+    --border-radius: 14px;
     --border-radius-small: 7px;
     --border-radius-large: 45px;
 
