--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,8 +173,8 @@ svg * {
   --color-gray: #F3F3F3;
   --color-gray-alt: #898989;
   --color-black: #000000;
-  --border: 1px solid var(var(--color-dark));
-  --border-raduis: 14px;
+  --border: 1px solid var(--color-dark);
+  --border-radius: 14px;
   --border-radius-small: 7px;
   --border-radius-large: 45px;
   --shadow: 0 5px 0 var(--color-dark);
@@ -259,4 +259,73 @@ h3 {
 
 h4 {
   font-size: clamp(18px, 1.3888888889vw, 20px);
+}
+
+.button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: var(--button-height);
+  padding-inline: 35px;
+  font-size: 20px;
+  color: var(--color-light);
+  background-color: var(--color-dark);
+  border: var(--border);
+  border-radius: var(--border-radius);
+}
+.button:hover {
+  color: var(--color-dark);
+  background-color: var(--color-accent);
+}
+.button--transparent {
+  color: var(--color-dark);
+  background-color: transparent;
+}
+
+.header {
+  padding-top: 60px;
+}
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
+}
+.header__menu {
+  margin-left: auto;
+  font-size: 20px;
+}
+.header__menu-list {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
+}
+.header__menu-link {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  height: 48px;
+}
+@media (hover: hover) {
+  .header__menu-link:hover::after {
+    width: 100%;
+  }
+}
+@media (hover: none) {
+  .header__menu-link:active::after {
+    width: 100%;
+  }
+}
+.header__menu-link::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  translate: -50%;
+  width: 0;
+  height: 2px;
+  background-color: currentColor;
+  transition-duration: inherit;
 }/*# sourceMappingURL=styles.css.map */
