--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,4 @@
 @import "normalize", "fonts", "mixins", "media", "variables", "utils", "globals";
 
-@import "blocks/button", "blocks/header";
+@import "blocks/button", "blocks/burger-button", "blocks/mobile-overlay",
+    "blocks/cross-button", "blocks/header";
