--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,8 +200,7 @@ svg * {
   border: 0 !important;
   padding: 0 !important;
   white-space: nowrap !important;
-  -webkit-clip-path: inset(100%) !important;
-          clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
   clip: rect(0 0 0 0) !important;
   overflow: hidden !important;
 }
@@ -468,4 +467,41 @@ h4 {
     padding-inline: 18px;
     font-size: 16px;
   }
+}
+
+.section {
+  padding-block: var(--section-padding-y);
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--section-padding-y);
+}
+.hero__main {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  -moz-column-gap: 35px;
+       column-gap: 35px;
+}
+.hero__body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 35px;
+  max-width: 513px;
+}
+.hero__description {
+  font-size: 20px;
+  line-height: 1.4;
+}
+.hero__partners-list {
+  display: flex;
+  justify-content: space-between;
+  -moz-column-gap: 37px;
+       column-gap: 37px;
+}
+.hero__partners-image {
+  filter: grayscale(1);
 }/*# sourceMappingURL=styles.css.map */
