--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,4 @@
 @import "normalize", "fonts", "mixins", "media", "variables", "utils", "globals";
 
 @import "blocks/button", "blocks/burger-button", "blocks/mobile-overlay",
-    "blocks/cross-button", "blocks/header";
+    "blocks/cross-button", "blocks/header", 'blocks/section', 'blocks/hero';
